differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr15698-4.c-5.4.0-1.out.txt
pr15698-4.c: In function ‘isnan’:
pr15698-4.c:7:1: error: number of arguments doesn’t match prototype
 int isnan(a) int a; {}  
 ^
pr15698-4.c:6:5: error: prototype declaration
 int isnan(void);  
     ^
